--- a/bank.html
+++ b/bank.html
@@ -68,7 +68,7 @@
         </div>
     </section>
 
-    <script src="../Baap er bank website/bank.js"></script>
+    <script src="bank.js"></script>
 </body>
 
 </html>
