--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </section>
 
-    <script src="../Baap er bank website/login.js"></script>
+    <script src="login.js"></script>
 </body>
 
 </html>
